# docker-packet-browser

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  hosts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-19-packet-browser-container.md
docs/superpowers/specs/: 2026-03-19-docker-container-design.md
scripts/: pre-push
src/: browser.rs  commands.rs  config.rs  display.rs  filter.rs  lib.rs  main.rs  session.rs
tests/: commands_test.rs  config_test.rs  display_test.rs  filter_test.rs  logger_test.rs  session_test.rs
