[package]
name = "packet-browser"
version = "0.1.0"
edition = "2021"
description = "Secure packet radio web browser for BPQ"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
headless_chrome = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
